<resources>
    <string name="app_name">AzureStorageExplorer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="invalid_name">Invalid name</string>
    <string name="close">Close</string>
    <string name="delete_confirmation">Deleted</string>
    <string name="blob_delete_failed">Failed to delete the blob item.</string>
    <string name="delete_blob_title">Delete Blob</string>
    <string name="delete_blob_confirmation_message">Are you really sure you want to delete this blob? This cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out_dialog_title">Sign Out</string>
    <string name="sign_out_dialog_confirmation_message">You will be signed out of this device. Signing out will clear all stored data from this device. Continue?</string>
    <string name="sign_out">Sign Out</string>
    <string name="blobs">Blobs</string>
    <string name="working">Working..</string>
    <string name="tables">Tables</string>
    <string name="delete_table_entity_title">Delete Entity</string>
    <string name="delete_table_entity_confirmation_message">Are you really sure you want to delete this entity? This cannot be undone.</string>
    <string name="rowkey">RowKey</string>
    <string name="action_add_table">Add Table</string>
    <string name="action_add_blob_container">Add Container</string>
    <string name="container_name">Container name</string>
    <string name="table_name">Table name</string>
    <string name="create_table">Create table</string>
    <string name="create_container">Create container</string>
    <string name="container_name_validation">Container name is required</string>
    <string name="table_name_validation">Table name is required</string>
    <string name="blob_created">Blob created.</string>
    <string name="failed_to_create_blob">Failed to create blob.</string>
    <string name="entity_deleted">Entity deleted.</string>
    <string name="failed_to_delete_entity">Failed to delete the entity.</string>
    <string name="nothing_to_show">Nothing to show</string>
</resources>
