<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_layout_padding_start"
    android:paddingEnd="@dimen/dialog_layout_padding_end"
    android:orientation="vertical"
    tools:context="com.pl.azurestorageexplorer.MainActivity">

    <EditText
        android:id="@+id/table_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/table_name"
        android:imeOptions="actionGo"
        android:inputType="text" />

    <ProgressBar
        android:id="@+id/create_table_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="gone" />
</LinearLayout>